force-app/main/default/objects/KimbleOne__CommissionAgreement__c/KimbleOne__CommissionAgreement__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Commission Agreement</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Agreements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>