force-app/main/default/objects/KimbleOne__CommissionAgreement__c/fields/KimbleOne__PerformanceAnalysis__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PerformanceAnalysis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Performance Analysis</label>
    <referenceTo>KimbleOne__PerformanceAnalysis__c</referenceTo>
    <relationshipLabel>Commission Agreements</relationshipLabel>
    <relationshipName>CommissionAgreements</relationshipName>
    <type>Lookup</type>
</CustomField>