force-app/main/default/objects/KimbleOne__CommissionAgreement__c/fields/KimbleOne__SalesOpportunity__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SalesOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Opportunity</label>
    <referenceTo>KimbleOne__SalesOpportunity__c</referenceTo>
    <relationshipLabel>Commission Agreements</relationshipLabel>
    <relationshipName>CommissionAgreements</relationshipName>
    <type>Lookup</type>
</CustomField>