force-app/main/default/objects/KimbleOne__CommissionAgreement__c/fields/KimbleOne__TotalMeasureValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TotalMeasureValue__c</fullName>
    <label>Total Measure Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>