force-app/main/default/objects/KimbleOne__CommissionAgreement__c/fields/KimbleOne__User__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CommissionAgreements</relationshipName>
    <type>Lookup</type>
</CustomField>